Fix height logo header container on mobile

--- a/css/components.css
+++ b/css/components.css
@@ -264,7 +264,7 @@
 /* Navbar */
 
 #header-home {
-    height: 62px;
+    height: 48px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -286,6 +286,11 @@
 }
 
 @media (min-width: 768px) {
+
+    #header-home {
+        height: 62px;
+    }
+
     #header-home .stepper-cover {
         display: flex;
         right: 40px;
